--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-calculator",
-  "homepage": "https://kmancz.github.io/react-calculator",
+  "homepage": "https://kmancz.github.io/React-Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
