package.json and readme edits

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-calculator",
-  "homepage": "https://kmancz.github.io/React-Calculator",
+  "homepage": "https://kmancz.github.io/React-Calculator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,6 @@
     "deploy": "gh-pages -d build",
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
